--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "another-one-brain-games",
-  "version": "1.4.0",
+  "version": "1.4.1",
   "description": "front-end project lvl 1",
   "main": "dist/index.js",
   "bin": {
@@ -39,6 +39,7 @@
     "eslint-plugin-import": "^2.18.2"
   },
   "dependencies": {
+    "@hexlet/pairs": "^1.0.10",
     "readline-sync": "^1.4.10"
   }
 }
