--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "another-one-brain-games",
-  "version": "1.4.1",
+  "version": "1.5.1",
   "description": "front-end project lvl 1",
   "main": "dist/index.js",
   "bin": {
-    "brain-even": "dist/bin/brain-even.js"
+    "brain-even": "dist/bin/brain-even.js",
+    "brain-calc": "dist/bin/brain-calc.js"
   },
   "files": [
     "dist"
