--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "another-one-brain-games",
-  "version": "1.5.1",
+  "version": "1.6.0",
   "description": "front-end project lvl 1",
   "main": "dist/index.js",
   "bin": {
     "brain-even": "dist/bin/brain-even.js",
-    "brain-calc": "dist/bin/brain-calc.js"
+    "brain-calc": "dist/bin/brain-calc.js",
+    "brain-gcd": "dist/bin/brain-gcd.js"
   },
   "files": [
     "dist"
