--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "another-one-brain-games",
-  "version": "1.7.0",
+  "version": "1.7.1",
   "description": "front-end project lvl 1",
   "main": "dist/index.js",
   "bin": {
     "brain-even": "dist/bin/brain-even.js",
     "brain-calc": "dist/bin/brain-calc.js",
-    "brain-gcd": "dist/bin/brain-gcd.js"
+    "brain-gcd": "dist/bin/brain-gcd.js",
+    "brain-progression": "dist/bin/brain-progression.js"
   },
   "files": [
     "dist"
