--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "another-one-brain-games",
-  "version": "1.8.2",
+  "version": "1.8.3",
   "description": "front-end project lvl 1",
   "bin": {
     "brain-even": "dist/bin/brain-even.js",
@@ -43,6 +43,7 @@
   },
   "dependencies": {
     "@hexlet/pairs": "^1.0.10",
+    "@hexlet/pairs-data": "^1.0.9",
     "readline-sync": "^1.4.10"
   }
 }
